-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
In mdt_reint_rename_internal(), we do not need do is_subdir check if source and target are in the same directory.
/* Check if @mtgtdir is subdir of @mold, before locking child
* to avoid reverse locking. */
rc = mdt_is_subdir(info, mtgtdir, old_fid); <--- no need check if mtgtdir == msrcdir
if (rc)
GOTO(out_put_old, rc);